@@ -1,29 +1,39 @@
-package com.debugandoideas.app_security.service;
+package com.debugandoideas.app_security.services;
 
-import com.debugandoideas.app_security.repositories.CustomerRepository;
+import org.springframework.stereotype.Service;
+import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
+import com.debugandoideas.app_security.repositories.CustomerRepository;
+
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.stereotype.Service;
 
 import java.util.stream.Collectors;
 
+
+/*
+ESTE ES UN SERVICIO PARA TRAERNOS EL USUARIO
+ */
 @Service
+@Transactional
 @AllArgsConstructor
-public class JwtUserDetailService implements UserDetailsService {
+public class CustomerUserDetails implements UserDetailsService {
+
     private final CustomerRepository customerRepository;
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         return this.customerRepository.findByEmail(username)
-                .map(customer ->{
-                    final var authorities = customer.getRoles()
+                .map(customer -> {
+                    final var roles = customer.getRoles();
+                    final var authorities = roles
                             .stream()
                             .map(role -> new SimpleGrantedAuthority(role.getName()))
-                            .toList();
-                    return  new User(customer.getEmail(), customer.getPassword(), authorities);
-                }).orElseThrow(()-> new UsernameNotFoundException("User not exist"));
+                            .collect(Collectors.toList());
+                    return new User(customer.getEmail(), customer.getPassword(), authorities);
+                }).orElseThrow(() -> new UsernameNotFoundException("User not found"));
     }
 }
